# cpp_oil_simulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  basic_sim_fusion.py  compiler.sh  mapa.py  oilspillsim-0.0.1-cp310-cp310-linux_x86_64.whl  pyproject.toml  requirements.txt  setup.py  storage.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
basic_sim/: CMakeLists.txt  main.cpp
conda.recipe/: meta.yaml
src/: basic_sim_fusion.py
src/basic_sim/: main.h
src/mapas/: defuniak_gps.csv
src/utils/: CMakeLists.txt
src/utils/basic_simulator/: CMakeLists.txt  basic_simulator.h
src/utils/map/: CMakeLists.txt  map.cpp  map.h
tests/: test.py
utils/basic_simulator/: CMakeLists.txt  basic_simulator.cpp  basic_simulator.h
utils/basic_simulator/.ipynb_checkpoints/: basic_simulator-checkpoint.cpp
utils/map/: CMakeLists.txt  map.cpp  map.h
utils/pywrap/: CMakeLists.txt  pywrap.cpp
